# ezcams-pi-agent

./: .gitignore  RASPBERRY_PI_SETUP_GUIDE.md  README.md  pyproject.toml
examples/ezcams-pi/: cameras.example.json  config.example.json
src/ezcams_pi_agent/: __main__.py  backend_client.py  camera_manager.py  cameras.py  cli.py  config.py  crypto.py  main.py  setup.py
src/ezcams_pi_agent/inference/: __init__.py  __main__.py  cli.py  config.py  engine.py  frame_source.py  hailo_infer.py  postprocess.py  preprocess.py  recorder.py
src/ezcams_pi_agent/streams/: __init__.py  common.py  factory.py  http_mjpeg.py  native.py  rtsp.py
systemd/: ezcams-pi-agent.service
tests/: test_camera_manager.py  test_cli_lifecycle.py  test_config_paths.py  test_signed_requests.py
