[project]
name = "ezcams-pi-agent"
version = "0.1.0"
description = "Raspberry Pi camera agent for EZ Cams"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ezcams-pi-agent = "ezcams_pi_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
